<?xml version="1.0" encoding="utf-8"?>

<!--
 * PReVo - A portable version of ReVo for Android
 * Copyright (C) 2012, 2016  Neil Roberts
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; version 2 of the License.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
  <string name="app_name">PReVo</string>
  <string name="select_language">Elektu lingvon</string>
  <string name="search">Serĉu</string>
  <string name="preferences">Agordoj</string>
  <string name="no_results">Neniuj vortoj troviĝis</string>
  <string name="other_language_note">Neniuj vortoj troviĝis en %1$s, jen vortoj en %2$s</string>
  <string name="type_to_filter">Tajpu ion por serĉi</string>
  <string name="main_languages">Ĉefaj lingvoj</string>
  <string name="all_languages">Ĉiuj lingvoj</string>
  <string name="menu_choose_language">Elektu lingvon</string>
  <string name="menu_search">Serĉu</string>
  <string name="menu_about">Pri</string>
  <string name="menu_copy_definition">Kopiu difinon</string>
  <string name="menu_create_flashcard_word">Kreu fulmkarton, difino→vorto</string>
  <string name="menu_create_flashcard_definition">Kreu fulmkarton, vorto→difino</string>
  <string name="menu_look_up_in_piv">Serĉu vorton ĉe Vortaro.net</string>
  <string name="menu_zoom">Zomu la tekston</string>
  <string name="menu_preferences">Agordoj</string>
  <string name="menu_search_language">Serĉu en %s</string>
  <string name="no_flashcard">Mankas aplikaĵo kiu povas krei fulmkarton. Eble vi volos instali “Anki”; almenaŭ version 2.0.</string>
  <string name="definition_label">Difino</string>
  <string name="close">Fermu</string>
  <string name="show_translations">Montritaj tradukoj</string>
  <string name="show_all_translations">Montru ĉiujn tradukojn</string>
  <string name="show_no_translations">Montru neniujn tradukojn</string>
  <string name="about_message">
<b>PReVo @VERSION@</b>\n
\nCopyright © 2012, 2013, 2016 Neil Roberts\n
\nLa datumo por la vortaro venas de Reta Vortaro.\n
\nThis program comes with ABSOLUTELY NO WARRANTY. This is free
software and you are welcome to redistribute it under certain
conditions. Click here for details.
  </string>
</resources>
