<?xml version="1.0" encoding="utf-8"?>

<!--
 * PReVo - A portable version of ReVo for Android
 * Copyright (C) 2012, 2016  Neil Roberts
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; version 2 of the License.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:a="http://schemas.android.com/apk/res/android">
  <item a:id="@+id/menu_copy_definition"
        a:title="@string/menu_copy_definition" />
  <item a:id="@+id/menu_create_flashcard_word"
        a:title="@string/menu_create_flashcard_word" />
  <item a:id="@+id/menu_create_flashcard_definition"
        a:title="@string/menu_create_flashcard_definition" />
  <item a:id="@+id/menu_look_up_in_piv"
        a:title="@string/menu_look_up_in_piv" />
</menu>
