<?xml version="1.0" encoding="utf-8"?>

<!--
 * PReVo - A portable version of ReVo for Android
 * Copyright (C) 2012  Neil Roberts
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; version 2 of the License.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:a="http://schemas.android.com/apk/res/android">
  <item a:id="@+id/menu_choose_language"
        a:title="@string/menu_choose_language" />
  <item a:id="@+id/menu_search"
        a:title="@string/menu_search"
        a:icon="@android:drawable/ic_menu_search"
        a:showAsAction="ifRoom" />
  <item a:id="@+id/menu_about"
        a:title="@string/menu_about"
        a:icon="@android:drawable/ic_menu_info_details" />
</menu>
